--- a/Sass/Ultility/_variable.scss
+++ b/Sass/Ultility/_variable.scss
@@ -43,6 +43,7 @@
 $dark--clr : black ;  
 $light--clr : white ;
 $primary--clr : rgb(187, 30, 255) ; 
+$gray-scale : rgb(71, 71, 71) ;
 $font-size-small : 1.5rem ;
 $font-size-sup-small : 1.7rem ;
 $font-size-up-small : 1.8rem ;
