--- a/Sass/Layouts/_LivePhone.scss
+++ b/Sass/Layouts/_LivePhone.scss
@@ -2,17 +2,16 @@
 .live__phone {
     width: 100%;
     height: 100%;
-    display: grid;
-    @include grid-gtc-3(1fr ,1fr, 1fr) ;
-    grid-gap: 1em .5em;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em .5em;
+    padding: 1rem .5rem;
     align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0%;
-    overflow: hidden;
+    justify-content: center;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
     div {
-        height: 4.5rem;
         background-color: #ffffff37;
         font-size: 3.5rem;
         display: flex;
@@ -20,13 +19,31 @@
         justify-content: center;
         flex-direction: column;
         padding: 1rem 0;
+        width: Max(15rem, 24%) ;
+        height: 10rem;
+        border-radius: 1rem;
+        &:hover {
+            background-color: rgba(255, 255, 255, 0.8);
+            i {
+                color: black;
+                transform: scale(1.15);
+            }
+            p {
+                color: black;
+                transform: scale(1.15);
+            }
+        }
         i {
             color: rgb(255, 255, 255);
+            transition: all .3s ease-in-out;
+            transform: scale(1);
         }
         p {
-            font-size: .9rem;
+            font-size: $font-size-small;
             color: white;
             margin-top: .5em;
+            transition: all .1s ease-in-out;
+            transform: scale(1);
         }
     }
 }
