--- a/Sass/Layouts/_Custom.scss
+++ b/Sass/Layouts/_Custom.scss
@@ -44,6 +44,7 @@
                     object-fit: contain;
                     z-index: +15;
                     height: 40rem;
+                    transform: translateY(-3%);
                 }
                 .custom__bar1 {
                     position: absolute;
@@ -92,7 +93,7 @@
                     align-items: center;
                     justify-content: center;
                     border-radius: 50%;
-                    z-index: +13;
+                    z-index: +20;
                     &::after {
                         position: absolute;
                         z-index: -1;
@@ -148,7 +149,7 @@
                 padding-left: 2em;
                 background-color: #ffffffd6;
                 &:hover {
-                    background-color: rgb(255, 252, 244);
+                    background-color: rgb(255, 238, 221);
                     box-shadow: 2rem 1rem 1rem -.5rem rgb(181, 181, 181);
                     transform: translateX(-3%);
                 }
@@ -159,7 +160,7 @@
                 padding-left: 2em;
                 background-color: #ffffffd6;
                 &:hover {
-                    background-color: rgb(238, 255, 255);
+                    background-color: rgb(225, 255, 254);
                     box-shadow: -2rem 1rem 1rem -.5rem rgb(181, 181, 181);
                     transform: translateX(+3%);
                 }
@@ -169,7 +170,7 @@
                 border-radius: .6em;
                 padding-left: 2em;
                 &:hover {
-                    background-color: rgb(246, 255, 247);
+                    background-color: rgb(225, 255, 228);
                     box-shadow: 2rem 1rem 1rem -.5rem rgb(181, 181, 181);
                     transform: translateX(-3%);
                 }
