--- a/Sass/Layouts/_Register.scss
+++ b/Sass/Layouts/_Register.scss
@@ -1,5 +1,6 @@
 @import '../Ultility/variable' ;
 .register {
+    overflow: hidden;
     .register__container {
         display: grid;
         grid-template-columns: repeat(auto-fit , minmax(47% , 1fr));
@@ -7,31 +8,35 @@
         align-items: center;
         justify-content: center;
         padding: .5em;
+        z-index: +10;
+        background-color: white;
         overflow: hidden;
-        &::after  , &::before{
-            content: "";
-            display: table;
-            clear: both;
-            position: absolute;
-            width: 100%;
-            height: 100%; 
-            background-color: rebeccapurple ; 
-            z-index: -1;
-            rotate: 45deg;   
-        }
         &::before {
-            left: 0;
-            transform: translateX(100%) translateY(100%) ;
-            transition: all .5s ease-out;
+            content :"\2b";
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            display: table ;
+            clear: both ;
+            white-space: pre ;
+            text-align: center ;
+            position: absolute ;
+            left: 50% ;
+            top: -100% ;
+            transform: translate(0% , -50%) ;
+            padding: 2rem; 
+            background-color: #ce5bffab ;
+            border: .2rem solid $primary--clr;
+            border-radius: 100% ;
+            font-size: $font-size-normal ;
+            letter-spacing: .2rem ;
+            color: white ; 
+            transition: all .5s ease-in-out;
         }
-        &:hover:after , &:hover::before {
-            transform: translateX(0%) translateY(0%) ;
-        }
-        &::after {
-            right: 0 ; 
-            rotate: 135deg;
-            transform: translateX(-100%) translateY(-100%) ;
-            transition: all .5s ease-out;
+        &:hover:before {
+            top: 50%;
+            transform: translate(-50% , -50%) ;
+            color: black ;
+            background-color: transparent ;
         }
         .register__left {
             @include dsply-column-cntr-cntr ; 
