--- a/Style.css
+++ b/Style.css
@@ -2237,6 +2237,10 @@ li {
   }
 }
 
+.register {
+  overflow: hidden;
+}
+
 .register .register__container {
   display: -ms-grid;
   display: grid;
@@ -2250,41 +2254,41 @@ li {
       -ms-flex-pack: center;
           justify-content: center;
   padding: .5em;
+  z-index: +10;
+  background-color: white;
   overflow: hidden;
 }
 
-.register .register__container::after, .register .register__container::before {
-  content: "";
+.register .register__container::before {
+  content: "\2b";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
   display: table;
   clear: both;
+  white-space: pre;
+  text-align: center;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rebeccapurple;
-  z-index: -1;
-  rotate: 45deg;
+  left: 50%;
+  top: -100%;
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+  padding: 2rem;
+  background-color: #ce5bffab;
+  border: 0.2rem solid #bb1eff;
+  border-radius: 100%;
+  font-size: 2rem;
+  letter-spacing: .2rem;
+  color: white;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
-.register .register__container::before {
-  left: 0;
-  -webkit-transform: translateX(100%) translateY(100%);
-          transform: translateX(100%) translateY(100%);
-  -webkit-transition: all .5s ease-out;
-  transition: all .5s ease-out;
-}
-
-.register .register__container:hover:after, .register .register__container:hover::before {
-  -webkit-transform: translateX(0%) translateY(0%);
-          transform: translateX(0%) translateY(0%);
-}
-
-.register .register__container::after {
-  right: 0;
-  rotate: 135deg;
-  -webkit-transform: translateX(-100%) translateY(-100%);
-          transform: translateX(-100%) translateY(-100%);
-  -webkit-transition: all .5s ease-out;
-  transition: all .5s ease-out;
+.register .register__container:hover:before {
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: black;
+  background-color: transparent;
 }
 
 .register .register__container .register__left {
